--- a/tagreader.yaml
+++ b/tagreader.yaml
@@ -265,6 +265,7 @@ pn532_i2c:
             size_t hass = payload.find("https://www.home-assistant.io/tag/");
             size_t applemusic = payload.find("https://music.apple.com");
             size_t spotify = payload.find("https://open.spotify.com");
+            size_t youtube_music = payload.find("ytmusic://");
             size_t sonos = payload.find("sonos-2://");
 
             if (type == "U" and hass != std::string::npos ) {
@@ -281,6 +282,11 @@ pn532_i2c:
             else if (type == "U" and spotify != std::string::npos ) {
               ESP_LOGD("tagreader", "Found Spotify tag NDEF");
               id(source)="spotify";
+              id(url)=payload;
+            }
+            else if (type == "U" and youtube != std::string::npos ) {
+              ESP_LOGD("tagreader", "Found Youtube Music tag NDEF");
+              id(source)="youtube_music";
               id(url)=payload;
             }
             else if (type == "U" and sonos != std::string::npos ) {
