--- a/tagreader.yaml
+++ b/tagreader.yaml
@@ -284,7 +284,7 @@ pn532_i2c:
               id(source)="spotify";
               id(url)=payload;
             }
-            else if (type == "U" and youtube != std::string::npos ) {
+            else if (type == "U" and youtube_music != std::string::npos ) {
               ESP_LOGD("tagreader", "Found Youtube Music tag NDEF");
               id(source)="youtube_music";
               id(url)=payload;
